# pythonlings

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint_and_test.yml
pythonlings/: display.py
pythonlings/adapters/: cmd.py
pythonlings/domain/: exercises.py
pythonlings/exercises/01_variables/: test_variables2.py  test_variables4.py  variables1.py  variables2.py  variables3.py  variables4.py  variables5.py
pythonlings/exercises/02_data_structures/: data_structures1.py  data_structures2.py  data_structures3.py  data_structures4.py  test_data_structures1.py
pythonlings/exercises/03_functions/: functions1.py  functions2.py  functions3.py  functions4.py  functions5.py
pythonlings/exercises/04_oop/: oop1.py  oop2.py  oop3.py  oop4.py  oop5.py  test_oop1.py  test_oop3.py  test_oop4.py
pythonlings/exercises/05_decorators/: decorators1.py  decorators2.py  decorators3.py  decorators4.py  decorators5.py  test_decorators1.py  test_decorators2.py  test_decorators4.py
pythonlings/exercises/06_type_hints/: test_type_hints1.py  test_type_hints2.py  (+7 more)
pythonlings/i18n/: abstract.en.yml  comprehensions.en.yml  context.en.yml  data_structures.en.yml  dataclasses.en.yml  decorators.en.yml  docstrings.en.yml  duckdb.en.yml  enums.en.yml  error.en.yml  fastapi.en.yml  functional.en.yml  functions.en.yml  generators.en.yml  linting.en.yml  modern.en.yml  oop.en.yml  polars.en.yml  pydantic.en.yml  pytest.en.yml  stdlib.en.yml  type.en.yml  variables.en.yml
pythonlings/services/: exercises.py  logging.py
tests/: conftest.py  test_pythonlings.py
(+181 files in other folders)
