[project]
name = "pythonlings"
version = "0.1.0"
description = "A Rustlings-inspired Python learning platform"
authors = [
    { name = "Ronald-TR", email = "ronald-farias@outlook.com" },
    { name = "Murilo", email = "murilo@dataroots.io" },
]
requires-python = ">=3.12"
dependencies = [
    "watchdog>=3.0",
    "click>=8.0.4",
    "python-i18n>=0.3.9",
    "PyYAML>=6.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "httpx>=0.27",
    "pytest>=8.0",
]

[project.scripts]
pythonlings = "pythonlings.__main__:main"

[dependency-groups]
dev = [
    "pytest-mock>=3.7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
norecursedirs = ["tests/fixtures", ".venv", "pythonlings/exercises", "tests/test_exercises"]

[tool.ruff]
line-length = 127
exclude = ["pythonlings/exercises", "tests/fixtures", "tests/test_exercises"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
